tekton/ci/0001_rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tektonci
