tekton/ci/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: ing
  namespace: tektonci  
spec:
  tls:
  - secretName: webhook-draft-ci-dogfooding-tekton-dev-tls
    hosts:
    - webhook-draft.ci.dogfooding.tekton.dev
  rules:
  - http:
      paths:
      - backend:
          serviceName: el-tekton-ci-webhook
          servicePort: 8080
        path: /*
